components/argo/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`argo.localdev.me`)
    services:
    - name: argo
      port: 80
  tls:
    secretName: argo-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argo
spec:
  redirectScheme:
    scheme: https
    permanent: true
